fix(license): fixed micro-overflow

--- a/styles/postbuild/general.scss
+++ b/styles/postbuild/general.scss
@@ -13,6 +13,7 @@ body {
   background: var(--color-neutral-1);
   color: var(--color-neutral-13);
   scroll-margin-top: 96px;
+  overflow-x: hidden;
   @include base-transition(background-color, color);
 
   @include theme-dark {
